@@ -34,7 +34,7 @@
 #include "vmath.h"
 #include "raytrace.h"
 #include "optical.h"
-#include "light.h"
+#include "optical/light.h"
 #include "plastic.h"
 #include "photonmap.h"
 
